keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    # Важно: Говорим ingress-контроллеру пробросить исходный протокол (HTTP)
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
#    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: traefik  # Замените на ваш ingress класс
  rules:
    - host: keycloak   # Замените на ваш домен или используйте nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
